# mcp-multi-agent-ssh

./: .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml
src/mcp_multi_agent_ssh/: __init__.py  connection_pool.py  credentials.py  server.py  types.py
tests/: __init__.py  test_credentials.py
